examples/test/testpolicy2732.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2732
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key24: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value17
      podSelector:
        matchLabels:
          key38: value2
          key35: value6
          key0: value37
